# Scintilla

./: .gitignore  LICENSE  PORTFOLIO_INSTRUCTIONS.md  README.md  app.py  pyproject.toml  requirements-cnn.txt  requirements.txt
artifacts/: hpge-ridge.joblib  smoke-ridge.joblib
data/hpge-soil-gamma-41/: README.md
data/hpge-soil-gamma-41/data/: link_download.txt
outputs/hpge-upload-examples/: heldout-0000-spectrum.csv  heldout-0596-spectrum.csv  heldout-0840-spectrum.csv  heldout-ground-truth.csv
scintilla/: __init__.py  cnn.py  hpge_archive.py  isotopes.py  model.py  safety.py  spectra.py  uploads.py
scripts/: __init__.py  export_hpge_examples.py  inspect_hpge_archive.py  train_demo.py  train_hpge_ridge.py
tests/: test_app.py  test_hpge_archive.py  test_model.py  test_safety.py  test_spectra.py  test_uploads.py
