[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "scintilla"
version = "0.1.0"
description = "Full-spectrum gamma-ray isotope fingerprinting research demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4,<2",
    "numpy>=2.1,<3",
    "pandas>=2.2,<3",
    "plotly>=5.24,<7",
    "scikit-learn>=1.5,<2",
    "streamlit>=1.39,<2",
]

[project.optional-dependencies]
cnn = ["torch>=2.5,<3"]
test = ["pytest>=8,<10"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
testpaths = ["tests"]
